# LearnEngine

./: .gitignore  .gitmodules  CMakeLists.txt
Editor/: CMakeLists.txt  EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
Editor/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Editor/assets/scenes/: Example.kld
Editor/assets/shaders/: FlatColor.glsl  Texture.glsl
Engine/: CMakeLists.txt
Engine/src/: Engine.h  kldpch.cpp  kldpch.h
Engine/src/Kaleidoscope/: Application.cpp  Application.h  Core.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Engine/src/Kaleidoscope/Core/: Application.cpp  Application.h  Base.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  MouseCodes.h  PlatformDetection.h  Timestep.h  Window.cpp  Window.h
Engine/src/Kaleidoscope/Debug/: Instrumentor.h
Engine/src/Kaleidoscope/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Kaleidoscope/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Kaleidoscope/Math/: Math.cpp  Math.h
Engine/src/Kaleidoscope/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Kaleidoscope/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Engine/src/Kaleidoscope/Utils/: PlatformUtils.h
Engine/src/Platform/Mac/: MacWindow.cpp  MacWindow.h
Engine/src/Platform/MacOS/: MacOSInput.cpp  MacOSInput.h  MacOSPlatformUtils.cpp  MacOSWindow.cpp  MacOSWindow.h
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Engine/src/runtime/: Application.cpp  Application.h  Core.h  Log.cpp  Log.h
Engine/src/runtime/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Sandbox/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Sandbox/assets/shaders/: Texture.glsl
